--- a/Currency Trade/Currency Trade/Currency Trade.vcxproj
+++ b/Currency Trade/Currency Trade/Currency Trade.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{A3A56AB9-79E7-4EBD-9F40-352498A3C1A4}</ProjectGuid>
-    <RootNamespace>ExpensiveCalcuator2</RootNamespace>
+    <ProjectGuid>{B7FA0249-50B9-451B-8EE2-3631D889FE08}</ProjectGuid>
+    <RootNamespace>CurrencyTrade</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
