--- a/Mad Libs/Mad Libs/Mad Libs.vcxproj
+++ b/Mad Libs/Mad Libs/Mad Libs.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{A3A56AB9-79E7-4EBD-9F40-352498A3C1A4}</ProjectGuid>
-    <RootNamespace>ExpensiveCalcuator2</RootNamespace>
+    <ProjectGuid>{DD37C7F5-4D9D-4A09-B2D8-D6E189F8ED0A}</ProjectGuid>
+    <RootNamespace>MadLibs</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
